--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       Welcome to the world young one, your mom and siblings have set off for the winter and you were left alone!
       Migrate to the south before winter comes.
     </p>
+    <p>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSIyhFV-Dhj8KGgwVv1q-e0MrKReEQUyHjO1fb80IvjSNgZ0VqXpOaAuEcidCY5WemwCUxs_BVR0LvV/pubembed?start=false&loop=true&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    </p>
   </div>
 
   <!-- The game canvas will render below -->
